
generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id        String   @id @default(cuid())
  email     String   @unique
  name      String?
  username  String?  @unique
  password  String?  // Hashed password (optional for Google OAuth users)
  phone     String?
  role      String   @default("USER") // "ADMIN" | "USER"
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  memberships   Membership[]
  contributions Contribution[]
  payments      Payment[]
  payouts       Payout[]
  withdrawalRequests WithdrawalRequest[]
  invitationsSent GroupInvitation[] @relation("InvitationsSent")
  notifications   Notification[]

  image        String?

  mfaOtp       String?
  mfaOtpExpiry DateTime?

  emailVerified Boolean @default(false)

  kycStatus          String    @default("NONE") // "NONE" | "PENDING" | "APPROVED" | "REJECTED"
  idDocumentCid      String?
  selfiePhotoCid     String?
  kycRejectionReason String?
  kycSubmittedAt     DateTime?
  kycReviewedAt      DateTime?
}

model Group {
  id              String   @id @default(cuid())
  name            String
  description     String?
  inviteCode      String   @unique
  contributionAmount Int
  frequency       String   // "WEEKLY" | "BIWEEKLY" | "MONTHLY" | "QUARTERLY"
  cycleType       String   // "ROTATING" | "FIXED"
  payoutOrder     String   @default("SEQUENTIAL") // "SEQUENTIAL" | "LOTTERY"
  minMembers      Int      @default(2)
  maxMembers      Int?
  contractTxHash        String?
  contractGroupId       String?
  status                String   @default("ACTIVE") // "ACTIVE" | "INACTIVE"
  currentCycle          Int      @default(1)
  currentRecipientIndex Int      @default(0)
  createdAt             DateTime @default(now())
  updatedAt       DateTime @updatedAt
  creator_id      String
  memberships     Membership[]
  contributions   Contribution[]
  payments        Payment[]
  payouts         Payout[]
  disputes        Dispute[]
  invitations     GroupInvitation[]
}

model GroupInvitation {
  id          String   @id @default(cuid())
  token       String   @unique
  groupId     String
  invitedById String
  email       String
  status      String   @default("PENDING") // "PENDING" | "ACCEPTED" | "DECLINED" | "EXPIRED"
  expiresAt   DateTime
  acceptedAt  DateTime?
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  group       Group    @relation(fields: [groupId], references: [id], onDelete: Cascade)
  invitedBy   User      @relation("InvitationsSent", fields: [invitedById], references: [id], onDelete: Cascade)

  @@index([groupId, email])
  @@index([token])
}

model Membership {
  id            String    @id @default(cuid())
  role          String    // "ADMIN" | "MEMBER"
  userId        String
  groupId       String
  createdAt     DateTime  @default(now())
  isDelinquent      Boolean   @default(false)
  delinquentAt      DateTime?
  exitRequestedAt   DateTime? // set when member requests to leave; exit completes after 7 days

  user  User  @relation(fields: [userId], references: [id])
  group Group @relation(fields: [groupId], references: [id])

  @@unique([userId, groupId])
}

model Contribution {
  id        String   @id @default(cuid())
  amount    Int
  status    String   @default("PENDING") // "PENDING" | "PAID" | "OVERDUE"
  cycle     Int      @default(1)
  dueDate   DateTime
  paidAt    DateTime?
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  userId    String
  groupId   String

  user  User  @relation(fields: [userId], references: [id], onDelete: Cascade)
  group Group @relation(fields: [groupId], references: [id], onDelete: Cascade)
  payment Payment?
}

model Payment {
  id              String   @id @default(cuid())
  userId          String
  user            User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  
  groupId         String
  group           Group    @relation(fields: [groupId], references: [id], onDelete: Cascade)
  
  contributionId  String?  @unique
  contribution    Contribution? @relation(fields: [contributionId], references: [id], onDelete: SetNull)
  
  amount          Float
  currency        String   @default("XAF")
  status          String   @default("PENDING") // PENDING, PROCESSING, COMPLETED, FAILED
  
  provider        String                        // MTN_MOMO or ORANGE_MONEY
  providerRef     String?  @unique             // Reference from payment provider
  phoneNumber     String                        // Phone number used for payment
  
  retryCount      Int      @default(0)
  lastRetry       DateTime?
  errorMessage    String?
  
  createdAt       DateTime @default(now())
  updatedAt       DateTime @updatedAt
}

model WithdrawalRequest {
  id          String   @id @default(cuid())
  userId      String
  user        User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  phoneNumber String
  amount      Float
  ussd        String
  dialerUrl   String

  provider    String   @default("MTN_MOMO")
  status      String   @default("PENDING")

  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  @@index([userId, createdAt])
}

model Payout {
  id              String   @id @default(cuid())
  groupId         String
  group           Group    @relation(fields: [groupId], references: [id], onDelete: Cascade)
  
  recipientId     String
  recipient       User     @relation(fields: [recipientId], references: [id], onDelete: Restrict)
  
  amount          Float
  currency        String   @default("XAF")
  status          String   @default("PENDING") // PENDING, SCHEDULED, PROCESSING, COMPLETED, FAILED
  
  cycle           Int      @default(1)
  provider        String                        // MTN_MOMO or ORANGE_MONEY
  providerRef     String?  @unique
  phoneNumber     String
  cycleTxHash     String?
  scheduledDate   DateTime
  processedDate   DateTime?
  
  retryCount      Int      @default(0)
  lastRetry       DateTime?
  errorMessage    String?
  escrowReason    String?  // set when status = "HELD" — funds held pending manual resolution

  createdAt       DateTime @default(now())
  updatedAt       DateTime @updatedAt
}

model Dispute {
  id              String    @id @default(cuid())
  title           String
  description     String?
  category        String    @default("OTHER") // "PAYMENT" | "PAYOUT" | "MEMBER_CONDUCT" | "RULE_VIOLATION" | "OTHER"
  evidenceCid     String?   // IPFS CID of attached evidence file
  status          String    @default("OPEN") // "OPEN" | "RESOLVED" | "EXPIRED"
  resolution      String?   // "UPHELD" | "REJECTED" — set on auto-resolve
  groupId         String
  createdBy       String
  votingDeadline  DateTime  // 72h after creation
  createdAt       DateTime  @default(now())
  updatedAt       DateTime  @updatedAt

  group Group @relation(fields: [groupId], references: [id], onDelete: Cascade)
  votes DisputeVote[]
}

model DisputeVote {
  id        String   @id @default(cuid())
  vote      String   // "UPHOLD" | "REJECT"
  disputeId String
  voterId   String   // user ID — one vote per member per dispute
  createdAt DateTime @default(now())

  dispute Dispute @relation(fields: [disputeId], references: [id], onDelete: Cascade)

  @@unique([disputeId, voterId])
}

model Notification {
  id        String   @id @default(cuid())
  userId    String
  type      String   // "ROLE_ASSIGNED" | "ROLE_REMOVED" | "MEMBER_REMOVED" | "ADMIN_MESSAGE" | "PAYMENT_RECEIVED" | "KYC_APPROVED" | "KYC_REJECTED"
  title     String
  body      String
  read      Boolean  @default(false)
  groupId   String?
  createdAt DateTime @default(now())

  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
}

model NotificationPreference {
  id                         String   @id @default(cuid())
  userId                     String   @unique
  
  // Email notifications
  emailPaymentSuccess        Boolean  @default(true)
  emailPaymentFailed         Boolean  @default(true)
  emailPayoutScheduled       Boolean  @default(true)
  emailDisputeFiled          Boolean  @default(true)
  emailVotingReminder        Boolean  @default(true)
  emailContributionReminder  Boolean  @default(true)
  
  // SMS notifications
  smsPaymentSuccess          Boolean  @default(true)
  smsPaymentFailed           Boolean  @default(true)
  smsPayoutScheduled         Boolean  @default(true)
  smsDisputeFiled            Boolean  @default(false)
  smsVotingReminder          Boolean  @default(true)
  smsContributionReminder    Boolean  @default(true)
  
  // Quiet hours (do not notify during these times)
  notificationQuietHours     Boolean  @default(false)
  quietHoursStart            String   @default("22:00") // HH:MM format
  quietHoursEnd              String   @default("08:00")  // HH:MM format
  
  createdAt                  DateTime @default(now())
  updatedAt                  DateTime @updatedAt
}